--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -4,15 +4,18 @@
   top: 0;
   width: 100%;
   height: 3.5rem;
-  background: #89adfb;
-  padding: 0 1rem;
+  background: #35137d;
+  padding: 0 2rem;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .main-navigation__logo h1 {
   margin: 0;
   font-size: 1.5rem;
+  color: #e0f1f7;
 }
 
 .main-navigation__items {
@@ -32,11 +35,14 @@
 
 .main-navigation__items a {
   text-decoration: none;
-  color: #000;
+  color: white;
+  padding: 0.25rem 0.5rem;
 }
 
 .main-navigation__items a:hover,
 .main-navigation__items a:active,
 .main-navigation__items a.active {
-  color: #f8e264;
+  background: #ffffff;
+  color: #35137d;
+  border-radius: 5px;
 }
