feat: add loading state and detailed events

--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -5,11 +5,12 @@
   position: fixed;
   top: 20vh;
   left: 5%;
+  z-index: 100;
 }
 
 .modal__header {
   padding: 1rem;
-  background: #35137d;
+  background: #5101d1;
   color: white;
 }
 
